# pubchemTools

./: Readme.md  pyproject.toml  setup.cfg
pubchemTools/: __init__.py  ghs_code.py  pubchemTools.py
