[metadata]
name= pubchemTools
version = 1.26
author = Tamás Haraszti
author_email = haraszti@dwi.rwth-aachen.de
readme = Readme.md
description = Helper functions to retrieve and handle pubchem records
long_description = "Pubchem class to retrieve chemical information from PubChem and present it in a comfortable class. Values can be also accessed as a dict."
long_description_content_type=text/plain
license = CC-BY(4) (https://creativecommons.org/licenses/by/4.0/)

[options]
packages= pubchemTools
install_requires =
    dictDigUtils
    requests > 2
